dart/digitor_engine_ffi/lib/src/node_graph.dart


final class DigitorNativeNodeGraph {
  DigitorNativeNodeGraph._(this._library, this._handle)
      : _destroy = _library.lookupFunction<_GraphDestroyN, _GraphDestroyD>('digitor_node_graph_destroy'),
        _getEndpoints = _library.lookupFunction<_GetEndpointsN, _GetEndpointsD>('digitor_node_graph_get_endpoints'),
        _select = _library.lookupFunction<_NodeN, _NodeD>('digitor_node_graph_select'),
        _addSerial = _library.lookupFunction<_AddSerialN, _AddSerialD>('digitor_node_graph_add_serial_after'),
        _addParallel = _library.lookupFunction<_AddParallelN, _AddParallelD>('digitor_node_graph_add_parallel_after'),
        _remove = _library.lookupFunction<_NodeN, _NodeD>('digitor_node_graph_remove'),
        _connect = _library.lookupFunction<_ConnectN, _ConnectD>('digitor_node_graph_connect'),
        _disconnect = _library.lookupFunction<_ConnectN, _ConnectD>('digitor_node_graph_disconnect'),
        _position = _library.lookupFunction<_PositionN, _PositionD>('digitor_node_graph_set_position'),
        _enabled = _library.lookupFunction<_NodeBoolN, _NodeBoolD>('digitor_node_graph_set_enabled'),
        _bypassed = _library.lookupFunction<_NodeBoolN, _NodeBoolD>('digitor_node_graph_set_bypassed'),
        _clear = _library.lookupFunction<_NodeN, _NodeD>('digitor_node_graph_clear_operations'),
        _primary = _library.lookupFunction<_PrimaryN, _PrimaryD>('digitor_node_graph_add_primary_wheels'),
        _log = _library.lookupFunction<_LogN, _LogD>('digitor_node_graph_add_log_wheels'),
        _curves = _library.lookupFunction<_CurvesN, _CurvesD>('digitor_node_graph_add_rgb_curves'),
        _qualifier = _library.lookupFunction<_QualifierN, _QualifierD>('digitor_node_graph_add_hsl_qualifier'),
        _lut1d = _library.lookupFunction<_Lut1dN, _Lut1dD>('digitor_node_graph_add_lut1d'),
        _lut3d = _library.lookupFunction<_Lut3dN, _Lut3dD>('digitor_node_graph_add_lut3d'),
        _effect = _library.lookupFunction<_EffectN, _EffectD>('digitor_node_graph_add_effect'),
        _window = _library.lookupFunction<_WindowN, _WindowD>('digitor_node_graph_add_power_window'),
        _identity = _library.lookupFunction<_TextN, _TextD>('digitor_node_graph_recipe_identity'),
        _json = _library.lookupFunction<_TextN, _TextD>('digitor_node_graph_to_json');

  factory DigitorNativeNodeGraph.create({String? libraryPath}) {
    final library = DigitorLibraryLoader.open(overridePath: libraryPath);
    final create = library.lookupFunction<_GraphCreateN, _GraphCreateD>('digitor_node_graph_create');
    final out = calloc<Pointer<Void>>();
    try {
      _check('nodeGraphCreate', create(out));
      if (out.value == nullptr) throw const DigitorEngineException('nodeGraphCreate', 100);
      return DigitorNativeNodeGraph._(library, out.value);
    } finally {
      calloc.free(out);
    }
  }

  final DynamicLibrary _library;
  Pointer<Void> _handle;
  bool _disposed = false;
  final _GraphDestroyD _destroy;
  final _GetEndpointsD _getEndpoints;
  final _NodeD _select;
  final _AddSerialD _addSerial;
  final _AddParallelD _addParallel;
  final _NodeD _remove;
  final _ConnectD _connect;
  final _ConnectD _disconnect;
  final _PositionD _position;
  final _NodeBoolD _enabled;
  final _NodeBoolD _bypassed;
  final _NodeD _clear;
  final _PrimaryD _primary;
  final _LogD _log;
  final _CurvesD _curves;
  final _QualifierD _qualifier;
  final _Lut1dD _lut1d;
  final _Lut3dD _lut3d;
  final _EffectD _effect;
  final _WindowD _window;
  final _TextD _identity;
  final _TextD _json;

  ({DigitorNodeId input, DigitorNodeId output}) endpoints() {
    _ensureAlive();
    final input = calloc<Uint64>();
    final output = calloc<Uint64>();
    try {
      _check('nodeGraphEndpoints', _getEndpoints(_handle, input, output));
      return (input: input.value, output: output.value);
    } finally {
      calloc.free(input);
      calloc.free(output);
    }
  }

  void select(DigitorNodeId node) {
    _ensureAlive();
    _check('nodeGraphSelect', _select(_handle, node));
  }

  DigitorNodeId addSerialAfter(DigitorNodeId after, {String name = 'Serial Node'}) {
    _ensureAlive();
    final nativeName = name.toNativeUtf8();
    final out = calloc<Uint64>();
    try {
      _check('nodeGraphAddSerial', _addSerial(_handle, after, nativeName, out));
      return out.value;
    } finally {
      malloc.free(nativeName);
      calloc.free(out);
    }
  }

  ({DigitorNodeId first, DigitorNodeId second}) addParallelAfter(
    DigitorNodeId after, {
    String firstName = 'Parallel A',
    String secondName = 'Parallel B',
  }) {
    _ensureAlive();
    final firstNameNative = firstName.toNativeUtf8();
    final secondNameNative = secondName.toNativeUtf8();
    final first = calloc<Uint64>();
    final second = calloc<Uint64>();
    try {
      _check('nodeGraphAddParallel', _addParallel(_handle, after, firstNameNative, secondNameNative, first, second));
      return (first: first.value, second: second.value);
    } finally {
      malloc.free(firstNameNative);
      malloc.free(secondNameNative);
      calloc.free(first);
      calloc.free(second);
    }
  }

  void remove(DigitorNodeId node) {
    _ensureAlive();
    _check('nodeGraphRemove', _remove(_handle, node));
  }

  void connect(DigitorNodeId source, DigitorNodeId destination) {
    _ensureAlive();
    _check('nodeGraphConnect', _connect(_handle, source, destination));
  }

  void disconnect(DigitorNodeId source, DigitorNodeId destination) {
    _ensureAlive();
    _check('nodeGraphDisconnect', _disconnect(_handle, source, destination));
  }

  void setPosition(DigitorNodeId node, DigitorNodePosition position) {
    _ensureAlive();
    final native = calloc<_NativeNodePosition>();
    try {
      native.ref
        ..x = position.x
        ..y = position.y;
      _check('nodeGraphSetPosition', _position(_handle, node, native.ref));
    } finally {
      calloc.free(native);
    }
  }

  void setEnabled(DigitorNodeId node, bool enabled) {
    _ensureAlive();
    _check('nodeGraphSetEnabled', _enabled(_handle, node, enabled ? 1 : 0));
  }

  void setBypassed(DigitorNodeId node, bool bypassed) {
    _ensureAlive();
    _check('nodeGraphSetBypassed', _bypassed(_handle, node, bypassed ? 1 : 0));
  }

  void clearOperations(DigitorNodeId node) {
    _ensureAlive();
    _check('nodeGraphClearOperations', _clear(_handle, node));
  }

  void addPrimaryWheels(DigitorPrimaryWheels value) {
    _ensureAlive();
    final native = calloc<_NativePrimaryWheels>();
    try {
      _setRgb(native.ref.lift, value.lift.rgb);
      native.ref
        ..liftMaster = value.lift.master
        ..liftEnabled = value.lift.enabled ? 1 : 0;
      _setRgb(native.ref.gamma, value.gamma.rgb);
      native.ref
        ..gammaMaster = value.gamma.master
        ..gammaEnabled = value.gamma.enabled ? 1 : 0;
      _setRgb(native.ref.gain, value.gain.rgb);
      native.ref
        ..gainMaster = value.gain.master
        ..gainEnabled = value.gain.enabled ? 1 : 0;
      _setRgb(native.ref.offset, value.offset.rgb);
      native.ref
        ..offsetMaster = value.offset.master
        ..offsetEnabled = value.offset.enabled ? 1 : 0;
      _check('nodeGraphPrimaryWheels', _primary(_handle, native));
    } finally {
      calloc.free(native);
    }
  }

  void addLogWheels(DigitorLogWheels value) {
    _ensureAlive();
    final native = calloc<_NativeLogWheels>();
    try {
      _setLogWheel(native.ref.shadows, value.shadows);
      _setLogWheel(native.ref.midtones, value.midtones);
      _setLogWheel(native.ref.highlights, value.highlights);
      _setLogWheel(native.ref.global, value.global);
      native.ref
        ..shadowPivot = value.shadowPivot
        ..highlightPivot = value.highlightPivot
        ..transitionWidth = value.transitionWidth;
      _check('nodeGraphLogWheels', _log(_handle, native));
    } finally {
      calloc.free(native);
    }
  }

  void addRgbCurves(DigitorRgbCurves value) {
    _ensureAlive();
    final native = calloc<_NativeRgbCurves>();
    final allocations = <Pointer<_NativeCurvePoint>>[];
    try {
      _setCurve(native.ref.master, value.master, allocations);
      _setCurve(native.ref.red, value.red, allocations);
      _setCurve(native.ref.green, value.green, allocations);
      _setCurve(native.ref.blue, value.blue, allocations);
      native.ref.lutSize = value.lutSize;
      _check('nodeGraphRgbCurves', _curves(_handle, native));
    } finally {
      for (final pointer in allocations) calloc.free(pointer);
      calloc.free(native);
    }
  }

  void addHslQualifier(DigitorHslQualifier value) {
    _ensureAlive();
    final native = calloc<_NativeHslQualifier>();
    try {
      _setRange(native.ref.hue, value.hue);
      _setRange(native.ref.saturation, value.saturation);
      _setRange(native.ref.luminance, value.luminance);
      native.ref
        ..blur = value.blur
        ..denoise = value.denoise
        ..cleanBlack = value.cleanBlack
        ..cleanWhite = value.cleanWhite
        ..invert = value.invert ? 1 : 0
        ..matteOutput = value.matteOutput ? 1 : 0;
      _check('nodeGraphHslQualifier', _qualifier(_handle, native));
    } finally {
      calloc.free(native);
    }
  }

  void addLut1d(List<DigitorLutColor> values, {DigitorLutInterpolation interpolation = DigitorLutInterpolation.linear}) {
    if (values.length < 2) throw ArgumentError.value(values.length, 'values', 'A 1D LUT needs at least two values.');
    _ensureAlive();
    final colors = _allocateColors(values);
    final native = calloc<_NativeLut1d>();
    try {
      native.ref
        ..values = colors
        ..valueCount = values.length
        ..interpolation = interpolation.index;
      _check('nodeGraphLut1d', _lut1d(_handle, native));
    } finally {
      calloc.free(colors);
      calloc.free(native);
    }
  }

  void addLut3d(int size, List<DigitorLutColor> values, {DigitorLutInterpolation interpolation = DigitorLutInterpolation.tetrahedral}) {
    if (size < 2 || values.length != size * size * size) {
      throw ArgumentError('3D LUT value count must equal size³.');
    }
    _ensureAlive();
    final colors = _allocateColors(values);
    final native = calloc<_NativeLut3d>();
    try {
      native.ref
        ..size = size
        ..values = colors
        ..valueCount = values.length
        ..interpolation = interpolation.index;
      _check('nodeGraphLut3d', _lut3d(_handle, native));
    } finally {
      calloc.free(colors);
      calloc.free(native);
    }
  }

  void addEffect(DigitorNodeEffect value) {
    _ensureAlive();
    final native = calloc<_NativeEffect>();
    try {
      native.ref
        ..type = value.type.index
        ..amount = value.amount
        ..radius = value.radius
        ..angle = value.angle
        ..seed = value.seed;
      _check('nodeGraphEffect', _effect(_handle, native));
    } finally {
      calloc.free(native);
    }
  }

  void addPowerWindow(DigitorPowerWindow value) {
    _ensureAlive();
    final native = calloc<_NativePowerWindow>();
    try {
      native.ref
        ..shape = value.shape.index
        ..centerX = value.centerX
        ..centerY = value.centerY
        ..width = value.width
        ..height = value.height
        ..rotation = value.rotation
        ..feather = value.feather
        ..opacity = value.opacity
        ..invert = value.invert ? 1 : 0;
      _check('nodeGraphPowerWindow', _window(_handle, native));
    } finally {
      calloc.free(native);
    }
  }

  String recipeIdentity() => _readText(_identity, 'nodeGraphRecipeIdentity');
  String toJson() => _readText(_json, 'nodeGraphToJson');

  void dispose() {
    if (_disposed) return;
    _check('nodeGraphDestroy', _destroy(_handle));
    _handle = nullptr;
    _disposed = true;
  }
